syntax = "proto3";

message transportSignaturesItem {
    string transaction = 1;
    bytes signature = 2;
    uint32 relays = 3;
}

message postSignatures {
    repeated transportSignaturesItem signatures = 1;
}


message transportGetSignaturesItem {
    string transaction = 1;
    repeated bytes signatures = 2;
}

message getSignaturesResponse {
    repeated transportGetSignaturesItem signatures = 1;
}
